# cde

./: .gitmodules  NEWS  README.md  TODO
cde/: .gitignore  HISTORY  Makefile  Makefile.am  Makefile.imake  README  README.md  autogen.sh  configure.ac  copyright  copyright.in
cde/admin/BuildNotes/: changing_version_number.txt
cde/config/cf/: DragonFly.cf  DtInfo.tmpl  FreeBSD.cf  Imake.cf  Imake.rules  Imake.tmpl  NetBSD.cf  OpenBSD.cf  bsdLib.rules  cde.tmpl  darwin.cf  darwinLib.tmpl  linux.cf
cde/config/util/: crayar.sh
cde/databases/: CDE-MIN.udb  CDE-RUN.src  CDE-RUN.udb  Imakefile
cde/databases-delete-later/: CDE-MIN.src  CDE-SHLIBS.src
cde/debian/: control
cde/delete-later/databases/: Imakefile
cde/doc/: Makefile.am
cde/doc/C/: Makefile.am
cde/doc/de_DE.ISO8859-1/: Makefile.am
cde/doc/en_US.UTF-8/: Makefile.am
cde/doc/fr_FR.UTF-8/: Makefile.am
cde/doc/ja_JP.UTF-8/: Imakefile  Makefile.am
cde/doc/util/: Makefile.am
cde/include/: EUSCompat.h  Makefile.am  cppfile.inc  cppfile.tmpl
cde/include/Dt/: ComboBoxP.h  Dt.h  Dt.h.in  DtNlUtils.h  HourGlass.h  SearchP.h  SpinBoxP.h  dproto.h
cde/include/DtI/: FontI.h
cde/lib/: Imakefile  Makefile.am
cde/lib/DtHelp/: AccessCCDF.c  AccessSDL.c  CvString.c  Font.c  Format.c  FormatCCDF.c  FormatCCDFI.h  FormatMan.c  FormatSDL.c  GlobSearch.c  Graphics.c  HelpXlate.c  HelpXlate.h  Helpos.c  Imakefile  Layout.c  LayoutUtil.c  LayoutUtilI.h  Makefile.am  Selection.c  StringFuncs.c  VirtFuncs.c  XInterface.c  decompress.c  libDtHelp.elist
cde/lib/DtMmdb/: Makefile.am
cde/lib/DtMrm/: Makefile.am
cde/lib/DtPamSvc/: Imakefile  Makefile.am  PamSvc.c  PamSvc.h
cde/lib/DtPrint/: Makefile.am  PrintSetupB.c  PsubUtil.c
cde/lib/DtSearch/: Makefile.am  boolsrch.c  boolyac.y  dtsrswab.c  hilite.c  jpn.c  lang.c  oekwic.c  tiny.c  vedelete.c  vestatis.c
cde/lib/DtSvc/: Makefile.am  libDtSvc.elist
cde/lib/DtTerm/: Imakefile  Makefile.am
cde/lib/DtWidget/: Control.c  DialogBox.c  Editor.c  Icon.c  Imakefile  Makefile.am  SpinBox.c  TitleBox.c
cde/lib/DtXinerama/: DtXinerama.c  Imakefile  Makefile.am
cde/lib/csa/: Makefile.am  agent.c  appt4.h  cm.x  cmxdr.c  connection.c  connection.h  convert5-4.c  debug.c  debug.h  free.h  hash.h  iso8601.c  lutil.c  match.c  rescan.c  rpccalls.c  rtable2.h  rtable2.x  rtable3.h  rtable3.x  rtable4.h  rtable4.x  table.c  xtclient.c
cde/lib/pam/: Makefile.am
cde/lib/tt/: Makefile.am  tooltalk.inc  tooltalk.tmpl
cde/logs/: Makefile.am
cde/m4/: ax_pthread.m4  compiler_flag_chk.m4  tcl.m4
cde/programs/: Makefile.am
cde/programs/backdrops/: Makefile.am
cde/programs/dsdm/: Makefile.am  dsdm.c  proxy.c
cde/programs/dtaction/: Main.c  Makefile.am
cde/programs/dtappbuilder/: Makefile.am
cde/programs/dtappintegrate/: Makefile.am  dtappintegrate.src
cde/programs/dtcalc/: Makefile.am  calctool.c  calctool.h  functions.c  help.c  motif.c  motif.h  mp.c  text.c  text.h
cde/programs/dtcm/: Makefile.am
cde/programs/dtconfig/: Makefile.am
cde/programs/dtcreate/: AddFiletype.c  FileCharacteristics.c  Makefile.am  af_aux.c  cmnrtns.c  main.c  parser.c
cde/programs/dtdbcache/: Main.c  Makefile.am
cde/programs/dtdocbook/: Makefile.am  dtdocbook.am  dtdocbook2infolib.c  dtdocbook2man.in  dtdocbook2sdl.in
cde/programs/dtdspmsg/: Makefile.am  dtdspmsg.c
cde/programs/dtexec/: Makefile.am
cde/programs/dtfile/: ChangeDirP.c  Directory.c  Encaps.c  File.c  FileDialog.c  FileManip.c  FileOp.c  Find.c  IconWindow.c  Imakefile  Main.c  Makefile.am  MkDir.c  OverWrite.c  SharedProcs.h  fsDialog.c
cde/programs/dthello/: Makefile.am  dthello.c  dthello.h
cde/programs/dthelp/: Makefile.am
cde/programs/dticon/: Makefile.am  dtIconShell.c  event.c  event.h  externals.h  fileIO.c  fileIO.h  globals.c  graphics.c  graphics.h  help.c  help.h  image.c  image.h  main.c  newIconDialog.c  process.c  process.h  queryDialog.c  stdErrDialog.c  utils.c  utils.h
cde/programs/dtimsstart/: Makefile.am  env.c  file.c  main.c  remote.c  start.c  util.c  win.c
cde/programs/dtinfo/: Makefile.am  dtinfo_env.mk
cde/programs/dtksh/: Imakefile  Makefile.am  README-DEVELOPER  XtCvtrs.c  builtins.c  dtextra.h  dtkcmds.c  dtkcmds.h  dtkcvt.c  dtksh.h  extra.c  findsym.c  init.c  init.patch  msgs.c  msgs.h  setup.sh  widget.c  widget.h  xmcmds.c  xmcvt.c  xmdtksym.c  xmextra.h  xmwidgets.c
cde/programs/dtlogin/: Imakefile  Makefile.am  account.c  auth.c  choose.c  chooser.c  dm.c  dm.h  dpylist.c  dtchooser.c  fontpath.c  genauth.c  mitauth.c  netaddr.c  reset.c  resource.c  server.c  session.c  socket.c  sysauth.c  util.c  vg.h  vgcallback.c  vgmain.c  vgutil.c  xdmauth.c  xdmcp.c
cde/programs/dtmail/: Makefile.am
cde/programs/dtopen/: Makefile.am  dtopen.src
cde/programs/dtpad/: Makefile.am  dtpad.c  fileCB.c  fileIo.c  main.c  printSetup.c  session.c  ttMsgSupport.c
cde/programs/dtpdm/: JobBox.c  Makefile.am
cde/programs/dtpdmd/: Makefile.am  dtpdmd.c  dtpdmdP.h
cde/programs/dtprintegrate/: Makefile.am
cde/programs/dtprintinfo/: Makefile.am
cde/programs/dtscreen/: Dtscreen.src  Makefile.am
cde/programs/dtsearchpath/: 0030.dttmpdir.src  Makefile.am
cde/programs/dtsession/: Imakefile  Makefile.am  Sm.h  SmLock.c  SmMain.c  SmSave.c  SmUI.c  SrvPalette.c  dtloadresources.src
cde/programs/dtspcd/: Makefile.am  main.c
cde/programs/dtsr/: Makefile.am  dtsrclean.c  dtsrcreate.c  dtsrhan.c  dtsrindex.c  dtsrkdump.c  dtsrload.c
cde/programs/dtstyle/: Audio.c  Backdrop.c  ColorEdit.c  ColorFile.c  ColorFile.h  ColorMain.c  Dtwm.c  Dtwm.h  Font.c  Help.c  Help.h  I18nEnv.c  I18nMain.c  I18nUtil.c  I18nUtil.h  Keyboard.c  Main.c  Main.h  MainWin.c  Makefile.am  Mouse.c  Protocol.c  Protocol.h  SaveRestore.c  Screen.c  Startup.c
cde/programs/dtterm/: DtTermLogit.c  DtTermMain.c  Imakefile  Makefile.am  sunDtTermServer.c
cde/programs/dtudcexch/: Makefile.am
cde/programs/dtudcfonted/: cpyx.c  util.c
cde/programs/dtwm/: Callback.c  Clock.c  DataBaseLoad.c  Dtwm.defs.src  Makefile.am  PopupMenu.c  README  UI.c  WmCDInfo.c  WmCDecor.c  (+20 more)
cde/util/: Makefile.am
(+2411 files in other folders)
